# TPGenSolve

./: .gitignore  README_RU.md  TPGenSolve.spec  TransSolver.spec  gen1.txt  gen2.txt  gen3.txt  main.py  pyproject.toml  requirements.txt  sol1.txt  view.py
transportation_model/: __init__.py  conditions.py  detailed_solution.py  final_solution.py  generation.py  solution.py  utils.py
