[project]
name = "tpgensolve"
version = "0.1.0"
description = "Приложение по геренации и решения транспортных задач, методом потенциалов"
authors = [
    {name = "Tairkhan"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "altgraph (==0.17.4)",
    "docx (==0.2.4)",
    "lxml (==5.4.0)",
    "packaging (==25.0)",
    "pillow (==11.2.1)",
    "pyinstaller (==6.13.0)",
    "pyinstaller-hooks-contrib (==2025.4)",
    "pyqt5 (==5.15.11)",
    "pyqt5-qt5 (==5.15.16)",
    "pyqt5-sip (==12.17.0)",
    "python-docx (==1.1.2)",
    "setuptools (==80.4.0)",
    "typing-extensions (==4.13.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
